fix: prevent scrollbar from causing an overflow in widgets

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -53,6 +53,10 @@ html {
   scrollbar-gutter: stable;
 }
 
+html[data-widget] {
+  scrollbar-gutter: auto;
+}
+
 html:has([open]:modal) {
   overflow: hidden;
 }
